--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "framer-motion": "^12.6.5",
     "lucide-react": "^0.487.0",
     "mongoose": "^8.13.2",
     "next": "15.3.0",
